# agent-rl-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
slurm-scripts/: submit_number_search_grpo.sh
src/agent_rl/: episode.py  registry.py  types.py
src/agent_rl/examples/number_search/: agent.py  config_grpo.yaml  env.py  number_search_val.jsonl  tasks.py  train_grpo.py
src/agent_rl/rollout_workflows/: orm_agent_workflow.py
