[project]
name = "agent-rl-examples"
version = "0.1.0"
description = "Examples of training LLM agents with RL."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = ["areal"]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pre-commit",
]

[tool.uv]
override-dependencies = [
  "openai==1.99.6",
  "xgrammar==0.1.24",
  "outlines-core==0.1.26",
  "pyarrow==20.0.0",
  "huggingface_hub==0.34",
  "datasets==4.3.0"
]
no-build-isolation-package = ['flash-attn']

[tool.uv.sources]
areal = { git = "https://github.com/inclusionAI/AReaL.git" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/agent_rl"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["music_llm"]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
namespace_packages = true
exclude = "^src/agent_rl/examples/"

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "areal", "areal.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true
